# rebayes-mini

./: README.md  pyproject.toml
docs/: api.md  developer.md  project_organization.md
examples/: 01_kalman_filter_basic.py  02_robust_filtering.py  README.md
rebayes_mini/: __init__.py  callbacks.py  states.py
rebayes_mini/adaptive/: changepoint_probability.py  constant.py  greedy_runlength.py  runlength.py
rebayes_mini/auxiliary/: base_aux.py  runlenght.py  runlength.py
rebayes_mini/datasets/: __init__.py  linear_ssm.py
rebayes_mini/methods/: __init__.py  adaptive.py  base_filter.py  changepoint_detection.py  ensemble_kalman_filter.py  extended_kalman_filter.py  gauss_filter.py  gaussian_process.py  generalised_bayes_filter.py  kalman_filter.py  low_rank_filter.py  low_rank_filter_revised.py  low_rank_last_layer.py  recursive_vi_gauss.py  replay_sgd.py  robust_filter.py  student_t_filter.py  subspace_filter.py  subspace_last_layer.py
rebayes_mini/models/: runlenght.py  runlength.py  state_space_models.py
rebayes_mini/states/: gaussian.py
rebayes_mini/updater/: full_rank_gaussian.py
